k8s/coma/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "immich.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: immich-server
                port:
                  number: 3001
  tls:
    - hosts:
        - "immich.artichoke.cc"
      secretName: artichoke-cc-cert
